tests/semantic/arrayDecl_error3.expected

Semantic Error [line 7]: 
	Invalid array declaration: 
	Expected 'Constant Integer' index type; found type: 'Variable'
