tests/semantic/arrayDecl_error3.mtp
(* Declare an array with variable index *)


var index : integer;
begin

	var something : array(index) of integer;
	begin
	end

end.